examples/valid/04_float_operations.moo
fun sumFloat(a: Float, b: Float) -> Float do
	return a +. b
end-sumFloat

fun main() -> Float do
	return sumFloat(5.1, 4.1)
end-main