examples/invalid/07_wrong_return_type.moo
fun sumFloat(a: Float, b:Float) -> Int do
	return a +. b
end-sumFloat

fun main() -> Int do
	return sumFloat(0.5,0.4)
end-main